--- a/my-project/src/style.scss
+++ b/my-project/src/style.scss
@@ -14,6 +14,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
   }
 
   *,
@@ -45,7 +46,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 10rem 90vh 70vh 100vh 75vh 40vh min-content min-content 60vh;
+    grid-template-rows: 10rem 90vh 70vh 100vh 75vh 40vh min-content min-content 40vh;
   }
 
   /* @media only screen and (max-width: 700px) {
@@ -63,7 +64,11 @@
 
 
   .btn_outline {
-    @apply border rounded-full p-3 border-mainColor text-mainColor flex justify-center
+    @apply border rounded-full p-3 border-mainColor text-mainColor flex justify-center transition-all duration-[.2s];
+
+    &:hover {
+      @apply text-white bg-mainColor
+    } 
   }
 
   .btn_outline .btn_outline:hover {
@@ -71,20 +76,27 @@
   }
 
   .btn_full {
-    @apply text-2xl font-bold border rounded-full p-3 bg-mainColor border-mainColor text-whiteColor h-10 w-72 flex justify-center items-center
-  }
+    @apply text-2xl font-bold border rounded-full p-3 bg-mainColor border-mainColor text-whiteColor h-10 w-72 flex justify-center items-center transition-all duration-[.2s];
 
-  .btn_full .btn_full:hover {
-    @apply bg-red-300
-  }
+    &:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 1rem 2rem rgba(#000, .2);
 
-  .btn_arrow {
-    @apply text-2xl font-bold border rounded-full p-3 bg-mainColor border-mainColor h-[1.5rem] w-[6rem] flex justify-center items-center
-  }
+    }
 
-  .btn_arrow .btn_arrow:hover {
-    @apply scale-50 transition-all
-  }
+    &:active,
+    &:focus {
+        transform: translateY(-1rem);
+        box-shadow: 0 .5rem 1rem rgba(#000, .2);
+    }
+
+
+}
+
+
+
+
+
 
   .header {
     background-color: #31a9dc;
