--- a/my-project/src/style.scss
+++ b/my-project/src/style.scss
@@ -58,7 +58,7 @@
   @media only screen and (max-width: 900px) {
     .Mycontainer {
       /* row-gap: 1.5rem; */
-      grid-template-rows: 3rem 60vh min-content min-content min-content 90vh 50vh min-content min-content min-content min-content min-content;
+      grid-template-rows: 3rem 60vh min-content min-content min-content 90vh 50vh min-content min-content min-content min-content 50vh;
     }
   }
   
