add border bottom to navbar and adding scrollbar

--- a/my-project/src/style.scss
+++ b/my-project/src/style.scss
@@ -10,13 +10,37 @@
 }
 
 @layer base {
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: #2accf544;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom,#4acef0d4, #009bf52f); 
+    border-radius: 0px;
+
+  }
+    
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(to top,#4acef0d4, #009bf52f); 
+    
+  }
+
+
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
+    
   }
-
+  
   *,
   *::after,
   *::before {
@@ -29,10 +53,6 @@
     font-size: 62.5%;
     font-family: 'Noto Kufi Arabic', sans-serif;
     scroll-behavior: smooth;
-  }
-
-  body {
-    overflow-x: hidden;
   }
 
   @media only screen and (max-width: 1300px) {
@@ -54,12 +74,6 @@
     grid-template-rows: 10rem min-content min-content min-content min-content min-content min-content min-content 40vh;
   }
 
-  /* @media only screen and (max-width: 700px) {
-    .Mycontainer {
-        grid-template-rows: 10rem 90vh 70vh 100vh 75vh 40vh min-content 100vh 45vh;;
-    }
-  } */
-  
   @media only screen and (max-width: 900px) {
     .Mycontainer {
       /* row-gap: 1.5rem; */
