--- a/my-project/src/style.scss
+++ b/my-project/src/style.scss
@@ -10,6 +10,17 @@
 }
 
 @layer base {
+  ::-moz-selection { /* Code for Firefox */
+    color: #217be3b4;
+    background: #13bce650;
+  }
+  
+  ::selection {
+    color: #217be3b4;
+    background: #13bce650;
+  }
+
+
   ::-webkit-scrollbar {
     width: 12px;
   }
@@ -55,17 +66,24 @@
     scroll-behavior: smooth;
   }
 
+  @media only screen and (max-width: 250) {
+    html {
+      font-size: 45%;
+    }
+  }
+
+  @media only screen and (max-width: 500) {
+    html {
+      font-size: 50%;
+    }
+  }
+  
   @media only screen and (max-width: 1300px) {
     html {
       font-size: 58%;
     }
   }
 
-  @media only screen and (max-width: 300) {
-    html {
-      font-size: 50%;
-    }
-  }
 
   .Mycontainer {
     display: grid;
@@ -77,7 +95,7 @@
   @media only screen and (max-width: 900px) {
     .Mycontainer {
       /* row-gap: 1.5rem; */
-      grid-template-rows: 3rem 60vh min-content min-content min-content min-content 50vh min-content min-content min-content min-content 50vh;
+      grid-template-rows: 3rem min-content min-content min-content min-content min-content 50vh min-content min-content min-content min-content 50vh;
     }
   }
   
